# codify

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ps1  build.sh  cmake_install.cmake
codecs/eclcrypt/: eclcrypt.c  eclcrypt.h
codecs/eclcrypt_pwd/: eclcrypt_pwd.c  eclcrypt_pwd.h
codecs/pigl/: pigl.c  pigl.h
codecs/ubdb/: ubdb.c  ubdb.h
includes/: backend.c  backend.h
src/: cli.c  main.c  window.cpp
